--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@uiw/react-md-editor": "^4.0.7",
+    "@xyflow/react": "^12.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jotai": "^2.12.4",
