--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "@xyflow/react": "^12.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "elkjs": "^0.10.0",
     "jotai": "^2.12.4",
     "langchain": "^0.3.20",
     "lucide-react": "^0.487.0",
