--- a/chatbot/docker-compose.yml
+++ b/chatbot/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 name: llmtoolflow 
 
 services:
@@ -13,5 +12,33 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} 
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_REGION=${AWS_REGION}
+      - AWS_BEDROCK_MODEL_ID=apac.anthropic.claude-3-haiku-20240307-v1:0
+      - ENV=local
+      - SERPER_API_KEY=${SERPER_API_KEY}
+      - TAVILY_API_KEY=${TAVILY_API_KEY} 
+      - DATABASE_URL=root:root@db:5432/llmtoolflow_db
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=0
     volumes:
       - ./handler/src:/var/task/src
+    depends_on:
+      - db
+
+  db:
+    image: postgres:latest
+    container_name: llmtoolflow-db
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root 
+      POSTGRES_DB: llmtoolflow_db 
+   
+  redis:
+    image: redis/redis-stack:latest
+    container_name: llmtoolflow-redis
+    ports:
+      - "6379:6379"
+      - "8001:8001"
+
