--- a/chatbot/handler/pyproject.toml
+++ b/chatbot/handler/pyproject.toml
@@ -5,44 +5,37 @@ build-backend = "hatchling.build"
 [project]
 name = "handler"
 version = "0.1.0"
-description = "Default template for PDM package"
-authors = [
-    {name = "Alex Nguyen", email = "alexnguyenth96@gmail.com"},
-]
-dependencies = [
-    "bcrypt==4.3.0",
-    "jwt==1.3.1",
-    "pyjwt==2.10.1",
-    "fastapi==0.115.12",
-    "mangum==0.19.0",
-    "boto3==1.37.31",
-    "sqlalchemy==2.0.40",
-    "redis==5.2.1",
-    "python-multipart==0.0.20",
-    "google-search-results==2.4.2",
-    "google-auth==2.38.0",
-    "google-auth-oauthlib==1.2.1",
-    "requests==2.32.3",
-    "pydantic[email]",
-    "psycopg[binary]",
-    "langchain[aws]",
-    "langchain-community",
-    "langchain-postgres",
-    "langchain-tavily",
-    "langgraph",
-    "langsmith",
-    "jsonschema==4.23.0",
-]
+description = "Add your description here"
 requires-python = ">=3.13"
+dependencies = [
+    "bcrypt>=4.3.0",
+    "boto3>=1.38.35",
+    "fastapi>=0.115.12",
+    "google-search-results>=2.4.2",
+    "jsonschema>=4.24.0",
+    "langchain>=0.3.25",
+    "langchain-aws>=0.2.25",
+    "langchain-community>=0.3.25",
+    "langchain-postgres>=0.0.13",
+    "langchain-tavily>=0.2.1",
+    "langgraph>=0.4.8",
+    "mangum>=0.19.0",
+    "psycopg>=3.2.9",
+    "pydantic[email]>=2.11.5",
+    "python-multipart>=0.0.20",
+    "redis>=6.2.0",
+    "requests>=2.32.4",
+    "sqlalchemy>=2.0.41",
+]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "black>=25.1.0",
-    "langgraph-cli[inmem]>=0.2.10",
+    "fastapi[standard]>=0.115.12",
 ]
 test = [
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
+    "pytest>=8.4.0",
+    "pytest-cov>=6.2.0",
 ]
 
 [tool.hatch.build.targets.wheel]
