--- a/chatbot/docker-compose.yml
+++ b/chatbot/docker-compose.yml
@@ -1,9 +1,8 @@
-name: llmtoolflow
+name: deepflow 
 
 services:
   db:
     image: postgres:latest
-    container_name: llmtoolflow-db
     ports:
       - "5432:5432"
     environment:
@@ -13,7 +12,6 @@ services:
 
   redis:
     image: redis/redis-stack:latest
-    container_name: llmtoolflow-redis
     ports:
       - "6379:6379"
       - "8001:8001"
