--- a/chatbot/handler/pyproject.toml
+++ b/chatbot/handler/pyproject.toml
@@ -16,10 +16,12 @@ dependencies = [
     "langchain>=0.3.25",
     "langchain-aws>=0.2.25",
     "langchain-community>=0.3.25",
+    "langchain-mcp-adapters>=0.1.7",
     "langchain-postgres>=0.0.13",
     "langchain-tavily>=0.2.1",
     "langgraph>=0.4.8",
     "mangum>=0.19.0",
+    "mcp>=1.10.1",
     "psycopg>=3.2.9",
     "pydantic[email]>=2.11.5",
     "python-multipart>=0.0.20",
